== In Git
* switch between installed ruby implementations
* use the default rvm ruby as default ruby within emacs

=== New Features

=== Bugfixes